# agsure-intelligence

./: .env.example  .gitignore  AGENTS.md  COPYRIGHT  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: data-dictionary.md  data-sources.md  methodology.md  project-scope.md
sample_data/: crops_synthetic.csv
sql/: schema.sql
src/agsure/: __init__.py  analysis.py  cli.py  commodities.py  dashboard.py  io.py  models.py  statcan.py  statcan_stocks.py  statcan_supply_disposition.py  stocks.py  stocks_to_use.py  unified_overview.py
src/agsure/crop_conditions/: __init__.py  alberta.py  artifact.py  common.py  ingest.py  manitoba.py  saskatchewan.py
src/agsure/weather/: __init__.py  artifact.py  common.py  config.py  ingest.py
tests/: test_analysis.py  test_crop_conditions.py  test_io.py  test_statcan.py  test_statcan_stocks.py  test_statcan_supply_disposition.py  test_stocks_to_use.py  test_unified_overview.py  test_weather.py
tests/fixtures/: statcan_32100007_small.csv  statcan_32100013_small.csv  statcan_32100013_stocks_to_use.csv  statcan_32100359_small.csv  unified_production.csv  unified_stocks.csv  unified_stocks_to_use.csv  unified_supply.csv
tests/fixtures/crop_conditions/: alberta_2026_synthetic.txt  manitoba_2026_synthetic.txt  saskatchewan_2026_synthetic.txt
tests/fixtures/weather/: claresholm_daily_synthetic.json  claresholm_station_synthetic.json
